--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
   <body>
     Hello there, awesome person! 
+      
+      <imc src="https://avatars3.githubusercontent.com/u/50582669?v=4q">
   </body>
 
 </html>
